<resources>
    <string name="app_name">TalentcubeTest</string>
    <string name="question_1">QUESTION 1</string>
    <string name="start">START</string>
    <string name="question_3">QUESTION 3</string>
    <string name="question_2">QUESTION 2</string>
    <string name="why">Why do you want to work for our company?</string>

    <!--Camera2Basic-->
    <string name="request_permission">Este aplicativo precisa ter acesso à câmera</string>
    <string name="request_permission_gps">Este aplicativo precisa ter acesso ao GPS.</string>

    <string name="upload_video">UPLOAD VIDEO</string>
    <string name="read_file">This app needs access to your file storage so that it can read video.</string>
    <string name="save">Save</string>

    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="intro_message">
        <![CDATA[


            This sample demonstrates how to record video using Camera2 API.


        ]]>
    </string>
    <string name="ok">Ok ?</string>
    <string name="continue_string">"  CONTINUE  "</string>
    <string name="second_try">SECOND TRY</string>
    <string name="play">play</string>
    <string name="done">done</string>
</resources>
