<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <FrameLayout
        android:id="@+id/fl1"
        android:elevation="1dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#308BCB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textSize="22sp"
            />

        <Button
            android:id="@+id/btn_start"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="32sp"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:background="@drawable/square_round_all"
            android:text="@string/start"
            />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl2"
        android:elevation="1dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl1"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="22sp"
            />

    </FrameLayout>

    <FrameLayout
        android:elevation="1dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#22a7a7a7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl1"
        >

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="22sp"
            />

    </FrameLayout>

</LinearLayout>
